--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <!-- CSS -->
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/home.css">
         <title>Tempora</title>
     </head>
     <body>
@@ -500,7 +500,7 @@
                 </div>
 
                 <!-- Button to show all products -->
-                <div class="d-flex justify-content-center"><a class="btn-show-catalog" href="#">Mais Produtos</a></div>
+                <div class="d-flex justify-content-center"><a class="btn-show-catalog" href="products.html">Mais Produtos</a></div>
             </section>
 
             <!-- Follow Instagram -->
@@ -529,7 +529,9 @@
                     </div>
                 </a>
             </section>
+        </main>
 
+        <footer>
             <section class="infobar">
                 <div class="row container m-auto">
                     <div class="col-12 col-md-6 col-lg-4 infobar-item">
@@ -557,69 +559,69 @@
                     </div>
                 </div>
             </section>
-        </main>
 
-        <footer>
-            <div class="row m-auto container">
-                <section class="col-12 col-lg-8 col-xl-6">
-                    <h2>CATEGORIAS</h2>
-                    <div class="row">
-                        <div class="col-6 col-md-4">
-                            <ul>
-                                <li><a href="#">Feminino</a></li>
-                                <li><a href="#">Masculino</a></li>
-                                <li><a href="#">Infantil</a></li>
-                                <li><a href="#">A prova d'água</a></li>
-                                <li><a href="#">Automático</a></li>
-                                <li><a href="#">Mecânico</a></li>
-                                <li><a href="#">Luxuoso</a></li>
-                                <li><a href="#">Simples</a></li>
-                            </ul>
+            <div class="footer-container">
+                <div class="row m-auto container">
+                    <section class="col-12 col-lg-8 col-xl-6">
+                        <h2>CATEGORIAS</h2>
+                        <div class="row">
+                            <div class="col-6 col-md-4">
+                                <ul>
+                                    <li><a href="#">Feminino</a></li>
+                                    <li><a href="#">Masculino</a></li>
+                                    <li><a href="#">Infantil</a></li>
+                                    <li><a href="#">A prova d'água</a></li>
+                                    <li><a href="#">Automático</a></li>
+                                    <li><a href="#">Mecânico</a></li>
+                                    <li><a href="#">Luxuoso</a></li>
+                                    <li><a href="#">Simples</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-6 col-md-4">
+                                <ul>
+                                    <li><a href="#">Casual</a></li>
+                                    <li><a href="#">Clássico</a></li>
+                                    <li><a href="#">Raridade</a></li>
+                                    <li><a href="#">Importado</a></li>
+                                    <li><a href="#">Extravagante</a></li>
+                                    <li><a href="#">m</a></li>
+                                    <li><a href="#">Luxuoso</a></li>
+                                    <li><a href="#">Simples</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-6 col-md-4">
+                                <ul>
+                                    <li><a href="#">Feminino</a></li>
+                                    <li><a href="#">Masculino</a></li>
+                                    <li><a href="#">Infantil</a></li>
+                                    <li><a href="#">A prova d'água</a></li>
+                                    <li><a href="#">Automático</a></li>
+                                    <li><a href="#">Mecânico</a></li>
+                                    <li><a href="#">Luxuoso</a></li>
+                                    <li><a href="#">Simples</a></li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="col-6 col-md-4">
-                            <ul>
-                                <li><a href="#">Casual</a></li>
-                                <li><a href="#">Clássico</a></li>
-                                <li><a href="#">Raridade</a></li>
-                                <li><a href="#">Importado</a></li>
-                                <li><a href="#">Extravagante</a></li>
-                                <li><a href="#">m</a></li>
-                                <li><a href="#">Luxuoso</a></li>
-                                <li><a href="#">Simples</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-6 col-md-4">
-                            <ul>
-                                <li><a href="#">Feminino</a></li>
-                                <li><a href="#">Masculino</a></li>
-                                <li><a href="#">Infantil</a></li>
-                                <li><a href="#">A prova d'água</a></li>
-                                <li><a href="#">Automático</a></li>
-                                <li><a href="#">Mecânico</a></li>
-                                <li><a href="#">Luxuoso</a></li>
-                                <li><a href="#">Simples</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </section>
+                    </section>
 
-                <section class="col-12 col-lg-4 col-xl-3">
-                    <h2>AJUDA</h2>
-                    <ul>
-                        <li><a href="#">Sobre Nós</a></li>
-                        <li><a href="#">Termos de Uso e Condições</a></li>
-                        <li><a href="#">Informações e Políticas de Envio</a></li>
-                        <li><a href="#">Política de Privacidade</a></li>
-                        <li><a href="#">Políticas de Devolução, Troca e Reembolso</a></li>
-                        <li><a href="#">Termos de Serviços</a></li>
-                    </ul>
-                </section>
+                    <section class="col-12 col-lg-4 col-xl-3">
+                        <h2>AJUDA</h2>
+                        <ul>
+                            <li><a href="#">Sobre Nós</a></li>
+                            <li><a href="#">Termos de Uso e Condições</a></li>
+                            <li><a href="#">Informações e Políticas de Envio</a></li>
+                            <li><a href="#">Política de Privacidade</a></li>
+                            <li><a href="#">Políticas de Devolução, Troca e Reembolso</a></li>
+                            <li><a href="#">Termos de Serviços</a></li>
+                        </ul>
+                    </section>
 
-                <section class="copyright col-12 col-lg-6 col-xl-3">
-                    <h2>TEMPORA</h2>
-                    <p>© 2023, Tempora. Todos os direitos reservados.</p>
-                    <p>RAZÃO SOCIAL: AA INTERMEDIACAO DE NEGOCIOS LTDA | CNPJ: 34.316.956/0001-19</p>
-                </section>
+                    <section class="copyright col-12 col-lg-6 col-xl-3">
+                        <h2>TEMPORA</h2>
+                        <p>© 2023, Tempora. Todos os direitos reservados.</p>
+                        <p>RAZÃO SOCIAL: AA INTERMEDIACAO DE NEGOCIOS LTDA | CNPJ: 34.316.956/0001-19</p>
+                    </section>
+                </div>
             </div>
         </footer>
 
