--- a/src/index.html
+++ b/src/index.html
@@ -149,7 +149,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -160,7 +160,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -171,7 +171,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -182,7 +182,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -193,7 +193,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -204,7 +204,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -215,7 +215,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -226,7 +226,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -237,7 +237,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -248,18 +248,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
-                                    <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
-                                </div>
-                            </a>
-                        </article>
-                        <article class="card">
-                            <a href="#">
-                                <img class="card-img-top" src="https://res.cloudinary.com/degkn8uwg/image/upload/v1/store_media/products/2023/01/27/436881892-12409706_nnlrpj" alt="">
-                                <div class="card-body">
-                                    <span class="old-price">R$ 100,00 </span><br/>
-                                    <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -276,7 +265,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -287,7 +276,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -298,7 +287,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -309,7 +298,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -320,7 +309,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -331,7 +320,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -342,7 +331,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -353,7 +342,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -364,7 +353,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -375,7 +364,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -392,7 +381,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -403,7 +392,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -414,7 +403,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -425,7 +414,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -436,7 +425,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -447,7 +436,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -458,7 +447,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -469,7 +458,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -480,7 +469,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
@@ -491,7 +480,7 @@
                                 <div class="card-body">
                                     <span class="old-price">R$ 100,00 </span><br/>
                                     <span class="current-price">R$ 100,00 </span>
-                                    <span style="color: #00A650; font-size: 15px;">Frete grátis</span>
+                                    <span class="shipping">Frete grátis</span>
                                     <h3>Kit Prong Cravejado Corrente + Pulseira Promoção Especial (ENTREGA EXPRESSA)</h3>
                                 </div>
                             </a>
